Unreviewed, fix broken pas_compiler_utils.h https://bugs.webkit.org/show_bug.cgi?id=288900 rdar://145901178
pas_compiler_utils.h is completely broken.

1. It is not included as Private in xcodeproj.
2. Its path is not properly set.
3. Using pragma once while it is on libpas.
4. User is not including pas_compiler_utils.h.

* Source/WTF/wtf/SequesteredImmortalHeap.cpp:
* Source/WTF/wtf/SequesteredImmortalHeap.h:
* Source/bmalloc/CMakeLists.txt:
* Source/bmalloc/bmalloc.xcodeproj/project.pbxproj:
* Source/bmalloc/libpas/src/libpas/pas_compiler_utils.h:
* Source/bmalloc/libpas/src/libpas/pas_utils_prefix.h:

Canonical link: https://commits.webkit.org/291423@main

--- a/Source/bmalloc/CMakeLists.txt
+++ b/Source/bmalloc/CMakeLists.txt
@@ -429,6 +429,7 @@ set(bmalloc_PUBLIC_HEADERS
     libpas/src/libpas/pas_compact_tagged_unsigned_ptr.h
     libpas/src/libpas/pas_compact_thread_local_cache_layout_node.h
     libpas/src/libpas/pas_compact_unsigned_ptr.h
+    libpas/src/libpas/pas_compiler_utils.h
     libpas/src/libpas/pas_compute_summary_object_callbacks.h
     libpas/src/libpas/pas_config.h
     libpas/src/libpas/pas_config_prefix.h
