--- a/Source/WebKit/NetworkProcess/SharedWorker/WebSharedWorkerServerConnection.messages.in
+++ b/Source/WebKit/NetworkProcess/SharedWorker/WebSharedWorkerServerConnection.messages.in
@@ -21,7 +21,8 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 [
-    ExceptionForEnabledBy,
+    SharedPreferencesNeedsConnection,
+    EnabledBy=SharedWorkerEnabled,
     DispatchedFrom=WebContent,
     DispatchedTo=Networking
 ]
