Re-enable mutation events in Apple applications except Safari https://bugs.webkit.org/show_bug.cgi?id=288856
Reviewed by Anne van Kesteren.

This PR adds a new SDK aligned behavior for DOM mutation events,
and reenables mutation events in Apple applications.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::CocoaApplication::isAppleApplication):
(WTF::IOSApplication::isAppleWebApp):
(WTF::applicationBundleStartsWith): Deleted.
(WTF::IOSApplication::isAppleApplication): Deleted.
* Source/WebCore/platform/ios/wak/WebCoreThread.mm:
(WebThreadEnable):
* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::isSafariOrWebApp):
(WebKit::defaultMutationEventsEnabled):
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/291447@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5352,7 +5352,7 @@ MutationEventsEnabled:
     WebKitLegacy:
       default: false
     WebKit:
-      default: false
+      default: WebKit::defaultMutationEventsEnabled()
     WebCore:
       default: false
 
