Implement WebAuthn Signal API https://bugs.webkit.org/show_bug.cgi?id=278339 rdar://problem/134285651
Reviewed by Nitin Mahendru.

This patch implements the new WebAuthn signal API. This allows RPs to
tell authenticators what credentials it will accept and also to update
credential information.

We don't currently mock the information nessesary to write tests for these
methods in LayoutTests.

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Modules/webauthn/AllAcceptedCredentialsOptions.h: Copied from Source/WebCore/Modules/webauthn/PublicKeyCredential.idl.
* Source/WebCore/Modules/webauthn/AllAcceptedCredentialsOptions.idl: Copied from Source/WebCore/Modules/webauthn/PublicKeyCredential.idl.
* Source/WebCore/Modules/webauthn/AuthenticatorCoordinator.cpp:
(WebCore::AuthenticatorCoordinator::signalUnknownCredential):
(WebCore::AuthenticatorCoordinator::signalAllAcceptedCredentials):
(WebCore::AuthenticatorCoordinator::signalCurrentUserDetails):
* Source/WebCore/Modules/webauthn/AuthenticatorCoordinator.h:
* Source/WebCore/Modules/webauthn/AuthenticatorCoordinatorClient.h:
* Source/WebCore/Modules/webauthn/CurrentUserDetailsOptions.h: Copied from Source/WebCore/Modules/webauthn/PublicKeyCredential.idl.
* Source/WebCore/Modules/webauthn/CurrentUserDetailsOptions.idl: Copied from Source/WebCore/Modules/webauthn/PublicKeyCredential.idl.
* Source/WebCore/Modules/webauthn/PublicKeyCredential.cpp:
(WebCore::PublicKeyCredential::signalUnknownCredential):
(WebCore::PublicKeyCredential::signalAllAcceptedCredentials):
(WebCore::PublicKeyCredential::signalCurrentUserDetails):
* Source/WebCore/Modules/webauthn/PublicKeyCredential.h:
* Source/WebCore/Modules/webauthn/PublicKeyCredential.idl:
* Source/WebCore/Modules/webauthn/UnknownCredentialOptions.h: Copied from Source/WebCore/Modules/webauthn/PublicKeyCreden

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -1678,6 +1678,24 @@ struct WebCore::AuthenticationExtensionsClientOutputs {
     int64_t alg;
 };
 
+struct WebCore::UnknownCredentialOptions {
+    String rpId;
+    String credentialId;
+};
+
+struct WebCore::AllAcceptedCredentialsOptions {
+    String rpId;
+    String userId;
+    Vector<String> allAcceptedCredentialIds;
+};
+
+struct WebCore::CurrentUserDetailsOptions {
+    String rpId;
+    String userId;
+    String name;
+    String displayName;
+};
+
 struct WebCore::AuthenticatorSelectionCriteria {
     std::optional<WebCore::AuthenticatorAttachment> authenticatorAttachment;
     std::optional<WebCore::ResidentKeyRequirement> residentKey;
