Fix AX sandbox violation https://bugs.webkit.org/show_bug.cgi?id=288892 rdar://145892392
Reviewed by Chris Dumez.

Fix violation seen when using VoiceOver.

* Source/WebKit/WebProcess/com.apple.WebProcess.sb.in:

Canonical link: https://commits.webkit.org/291460@main

--- a/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
+++ b/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
@@ -1696,10 +1696,7 @@
     (message-number 204 207 301 711 800 804))
 
 (define (mach-bootstrap-message-numbers-post-launch)
-#if ENABLE(INITIALIZE_ACCESSIBILITY_ON_DEMAND)
-    (message-number 204)
-#endif
-    (message-number 207 301 800 804))
+    (message-number 204 207 301 800 804))
 
 (define (allow-mach-bootstrap-with-filter)
     (allow mach-bootstrap
