Spatial Video does not show Immersive or View Spatial button when muted or lacks audio track https://bugs.webkit.org/show_bug.cgi?id=288706 rdar://137636134
Reviewed by Jer Noble.

When and how to display Docking, Immersive and View Spatial used the same
heuristic as PiP when in element fullscreen. That is, it always used
the NowPlaying eligible media element which requires that:
- the element has an audible audio track
- is not muted
- is currently playing or has been played previously.

This NowPlaying eligible media would be used when docking even if it wasn't
in the hierarchy of the element in fullscreen.
As such, we couldn't dock or play in immersive or spatial mode silent videos.

We now decouple the handling of element fullscreen from this heuristic.
Instead we will only consider all video elements that are a child of the element
in fullscreen.
To avoid having the UI process regularly query the web process, we now maintain
in each of the VideoPresentationModels the fullscreen inheritance state and keep
those in sync between the webcontent and UI processes.

Should more than one video element be visible while in element fullscreen
for now we will select the one that is the most visible in the current viewport
and fill over 25% of the web view area (similar to the heuristic adopted in 280710@main).
Whenever the fullscreen visibility change, we will update the status
of the top icons and display them accordingly.

This heuristic will be further tuned in a future change (such as preferring
a video that was the most recently played).
For now, this new heuristic is placed behind a pref which is off by default.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::hasJSEventListener): Added.
(WebCore::DocumentFullscreen::dispatchPendingEvents): Only check for JS listeners to determine which even to fire.
* Source/WebCore/platform/cocoa/VideoPresentationModel.h:
(WebCore::VideoPresentationModelClient::isC

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -8262,6 +8262,21 @@ VerticalFormControlsEnabled:
       "PLATFORM(COCOA)": true
       default: false
 
+VideoFullsceenPrefersMostVisibleHeuristic:
+  type: bool
+  status: testable
+  category: media
+  humanReadableName: "Prefers most visible video in element fullscreen."
+  humanReadableDescription: "Prefers most visible video in element fullscreen."
+  condition: ENABLE(FULLSCREEN_API)
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+
 VideoFullscreenRequiresElementFullscreen:
   type: bool
   status: embedder
@@ -8274,7 +8289,7 @@ VideoFullscreenRequiresElementFullscreen:
     WebCore:
       default: false
   sharedPreferenceForWebProcess: true
-      
+
 VideoPresentationManagerEnabled:
   type: bool
   status: embedder
