Put Trusted Types behind a LOA check https://bugs.webkit.org/show_bug.cgi?id=289013 rdar://146058057
Reviewed by Aditya Keerthi.

Avoid potential breakage with 3rd party WKWebView clients that might be injecting scripts into sites that use Trusted Types (like YouTube).

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultTrustedTypesEnabled):
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/291541@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7775,7 +7775,7 @@ TrustedTypesEnabled:
     WebKitLegacy:
       default: false
     WebKit:
-      default: true
+      default: WebKit::defaultTrustedTypesEnabled()
     WebCore:
       default: true
 
