Pause silent push timer in webpushd for inspected workers https://bugs.webkit.org/show_bug.cgi?id=288924 rdar://144997342
Reviewed by Brady Eidson.

When a service worker is being inspected and built-in notifications are on, the silent push
enforcement timer in webpushd is not suspended. This can cause a push subscription to be erroneously
removed.

Fix this by not enforcing the silent push heuristic when an origin is being inspected. For
simplicity, we currently suspend enforcement until the related service worker is killed.

Combined changes:
* LayoutTests/http/wpt/service-workers/push-console-messages-no-showNotification.https-expected.txt:
* LayoutTests/http/wpt/service-workers/push-console-messages-showNotification-late.https-expected.txt:
* Source/WebCore/workers/service/context/ServiceWorkerThread.cpp:
(WebCore::ServiceWorkerThread::queueTaskToFirePushEvent):
* Source/WebKit/NetworkProcess/Notifications/NetworkNotificationManager.cpp:
(WebKit::NetworkNotificationManager::setServiceWorkerIsBeingInspected):
* Source/WebKit/NetworkProcess/Notifications/NetworkNotificationManager.h:
* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
(WebKit::WebSWServerToContextConnection::setAsInspected):
* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerToContextConnection.h:
* Source/WebKit/webpushd/PushClientConnection.h:
* Source/WebKit/webpushd/PushClientConnection.messages.in:
* Source/WebKit/webpushd/PushClientConnection.mm:
(WebPushD::PushClientConnection::~PushClientConnection):
(WebPushD::PushClientConnection::setServiceWorkerIsBeingInspected):
* Source/WebKit/webpushd/WebPushDaemon.h:
* Source/WebKit/webpushd/WebPushDaemon.mm:
(WebPushD::WebPushDaemon::silentPushTimerFired):
(WebPushD::WebPushDaemon::setServiceWorkerOriginIsBeingInspected):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:
(TestWebKitAPI::(WebPushDBuiltInTest, ImplicitSilentPushTimerCancelledOnShowingNotification)):
(TestWebKitAPI::(WebPushDBuiltInTest, Impl

--- a/Source/WebKit/webpushd/PushClientConnection.messages.in
+++ b/Source/WebKit/webpushd/PushClientConnection.messages.in
@@ -45,6 +45,7 @@ messages -> WebPushD::PushClientConnection NotUsingIPCConnection {
     RequestPushPermission(WebCore::SecurityOriginData origin) -> (bool granted)
     SetAppBadge(WebCore::SecurityOriginData origin, std::optional<uint64_t> badge)
     GetAppBadgeForTesting() -> (std::optional<uint64_t> badge)
+    SetServiceWorkerIsBeingInspected(URL scopeURL, bool isInspected) -> ()
     SetProtocolVersionForTesting(unsigned version) -> ()
 }
 
