Partially revert "Web Inspector: The new ServiceWorkerDebuggableProxy needs to adopt auto inspection" https://webkit.org/b/289027 rdar://problem/146064991
Reviewed by BJ Burg.

This reverts most of commit 50e5a0f85821c2e0ff2373edab9b7f8ce01d997e,
except for the feature flag, leaving it absent from WTF/PlatformEnable.h.

Work reverted:
    Web Inspector: The new ServiceWorkerDebuggableProxy needs to adopt auto inspection
    rdar://145795990
    https://bugs.webkit.org/show_bug.cgi?id=288776

Canonical link: https://commits.webkit.org/291572@main

--- a/Source/WebKit/UIProcess/WebProcessProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebProcessProxy.messages.in
@@ -102,8 +102,8 @@ messages -> WebProcessProxy WantsDispatchMessage {
 #endif
 
 #if ENABLE(REMOTE_INSPECTOR) && PLATFORM(COCOA)
-    CreateServiceWorkerDebuggable(WebCore::ServiceWorkerIdentifier identifier, URL url) -> (bool shouldPauseAndWaitForAutoInspection) Async
+    CreateServiceWorkerDebuggable(WebCore::ServiceWorkerIdentifier identifier, URL url)
     DeleteServiceWorkerDebuggable(WebCore::ServiceWorkerIdentifier identifier)
-    SendMessageToInspector(WebCore::ServiceWorkerIdentifier identifier, String message);
+    SendMessageToInspector(WebCore::ServiceWorkerIdentifier identifier, String message));
 #endif
 }
