Annotate Cookie Consent API message with feature flag https://bugs.webkit.org/show_bug.cgi?id=289144 rdar://125903174
Reviewed by Charlie Wolfe and Ryosuke Niwa.

Ensure the message can only be handled when Cookie Consent API is enabled.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:

Canonical link: https://commits.webkit.org/291642@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -2182,6 +2182,7 @@ CookieConsentAPIEnabled:
       default: false
     WebKit:
       default: false
+  sharedPreferenceForWebProcess: true
 
 # FIXME: This is handled via WebView SPI rather than WebPreferences for WebKitLegacy. We should change the SPI to lookup the WebPreferences value instead.
 CookieEnabled:
