[WPE] WPEPlatform: add default accessibility implementation using ATK https://bugs.webkit.org/show_bug.cgi?id=289329
Reviewed by Adrian Perez de Castro.

When WebKit is built with ATK and the platform doesn't implement
WPEView::get_accessible, a default implementation is provided using ATK.

* Source/WebKit/UIProcess/API/wpe/PageClientImpl.cpp:
(WebKit::PageClientImpl::accessible):
* Source/WebKit/UIProcess/API/wpe/WPEWebView.cpp:
(WKWPE::View::~View):
(WKWPE::View::accessible const): Deleted.
* Source/WebKit/UIProcess/API/wpe/WPEWebView.h:
* Source/WebKit/UIProcess/API/wpe/WPEWebViewLegacy.cpp:
(WKWPE::ViewLegacy::~ViewLegacy):
(WKWPE::ViewLegacy::accessible const):
* Source/WebKit/UIProcess/API/wpe/WPEWebViewLegacy.h:
* Source/WebKit/UIProcess/wpe/WebPageProxyWPE.cpp:
(WebKit::WebPageProxy::bindAccessibilityTree):
* Source/WebKit/WPEPlatform/CMakeLists.txt:
* Source/WebKit/WPEPlatform/wpe/WPEAccessibilityAtk.cpp: Added.
(WPE::initializeAtkUtil):
(WPE::accessibilityAtkInit):
* Source/WebKit/WPEPlatform/wpe/WPEAccessibilityAtk.h: Added.
* Source/WebKit/WPEPlatform/wpe/WPEApplicationAccessibleAtk.cpp: Added.
(wpeApplicationAccessibleAtkConstructed):
(wpeApplicationAccessibleAtkInitialize):
(wpeApplicationAccessibleAtkGetNChildren):
(wpeApplicationAccessibleAtkRefChild):
(wpeApplicationAccessibleAtkGetName):
(wpe_application_accessible_atk_class_init):
(wpeApplicationAccessibleAtkNew):
(wpeApplicationAccessibleAtkGetToplevelIndex):
* Source/WebKit/WPEPlatform/wpe/WPEApplicationAccessibleAtk.h: Added.
* Source/WebKit/WPEPlatform/wpe/WPEToplevel.cpp:
(wpeToplevelConstructed):
(wpeToplevelDispose):
(wpe_toplevel_class_init):
(wpeToplevelList):
(wpeToplevelGetView):
(wpeToplevelGetAccessibleAtk):
* Source/WebKit/WPEPlatform/wpe/WPEToplevelAccessibleAtk.cpp: Added.
(toplevelDestroyedCallback):
(wpeToplevelAccessibleAtkDispose):
(wpeToplevelAccessibleAtkInitialize):
(wpeToplevelAccessibleAtkRefStateSet):
(wpeToplevelAccessibleAtkGetIndexInParent):
(wpeToplevelAccessibleAtkG

--- a/Source/WebKit/WPEPlatform/CMakeLists.txt
+++ b/Source/WebKit/WPEPlatform/CMakeLists.txt
@@ -113,6 +113,24 @@ elseif (USE_LIBDRM)
     list(APPEND WPEPlatform_LIBRARIES LibDRM::LibDRM)
 endif ()
 
+if (USE_ATK)
+    list(APPEND WPEPlatform_SYSTEM_INCLUDE_DIRECTORIES
+        ${ATK_INCLUDE_DIRS}
+    )
+
+    list(APPEND WPEPlatform_LIBRARIES
+        ATK::Bridge
+        ${ATK_LIBRARIES}
+    )
+
+    list(APPEND WPEPlatform_SOURCES
+        ${WEBKIT_DIR}/WPEPlatform/wpe/WPEAccessibilityAtk.cpp
+        ${WEBKIT_DIR}/WPEPlatform/wpe/WPEApplicationAccessibleAtk.cpp
+        ${WEBKIT_DIR}/WPEPlatform/wpe/WPEToplevelAccessibleAtk.cpp
+        ${WEBKIT_DIR}/WPEPlatform/wpe/WPEViewAccessibleAtk.cpp
+    )
+endif ()
+
 if (NOT USE_SYSTEM_MALLOC)
    list(APPEND WPEPlatform_LIBRARIES bmalloc)
 endif ()
